Shifted To Cloud Database

--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Feed | Pinterest</title>
+  <title>Feed | Picify</title>
   <link rel="stylesheet" href="/stylesheets/feed.css" />
 </head>
 <body>
 
   <header>
-    <h1>Pinterest</h1>
+    <h1>Picify</h1>
     <a href="/profile" class="profile-btn">Go to Profile</a>
   </header>
 
