--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pinterest Clone</title>
+  <title>Picify</title>
 
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
@@ -13,7 +13,7 @@
       <div class="logo">
         <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Pinterest-logo.png" alt="Pinterest Logo">
       </div>
-      <h2 class="title">Welcome to Pinterest</h2>
+      <h2 class="title">Welcome to Picify</h2>
       <form action="/register" method="post">
         <input type="email" name="email" placeholder="Email" required>
         <input type="text" name="username" placeholder="Username" required>
@@ -22,13 +22,13 @@
 
         <button type="submit" class="login-btn">Sign Up</button>
       </form>
-      <div class="or">OR</div>
+      <!-- <div class="or">OR</div>
       <div class="social-login">
         <button class="social-btn facebook">Continue with Facebook</button>
         <button class="social-btn google">Continue with Google</button>
-      </div>
+      </div> -->
       <p class="terms">
-        By continuing, you agree to Pinterest's <a href="#">Terms of Service</a> and acknowledge<br>
+        By continuing, you agree to Picify's <a href="#">Terms of Service</a> and acknowledge<br>
         you've read our <a href="#">Privacy Policy</a>.
       </p>
       <p class="signup">
