--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pinterest Clone</title>
+  <title>Picify</title>
 
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
@@ -13,7 +13,7 @@
       <div class="logo">
         <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Pinterest-logo.png" alt="Pinterest Logo">
       </div>
-      <h2 class="title">Welcome to Pinterest</h2>
+      <h2 class="title">Welcome to Picify</h2>
 
       <% if (error.length > 0) { %>
         <p class="error"><%= error %></p>
@@ -26,13 +26,13 @@
         <a href="/forgot" class="forgot-password">Forgot your password?</a>
         <button type="submit" class="login-btn">Login</button>
       </form>
-      <div class="or">OR</div>
+      <!-- <div class="or">OR</div>
       <div class="social-login">
         <button class="social-btn facebook">Continue with Facebook</button>
         <button class="social-btn google">Continue with Google</button>
-      </div>
+      </div> -->
       <p class="signup" >
-        Not on Pinterest yet? <a href="/">Sign Up</a>
+        Not on Picify yet? <a href="/">Sign Up</a>
       </p>
     </div>
   </div>
