--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,14 +22,18 @@
 
         <button type="submit" class="login-btn">Sign Up</button>
       </form>
-      <!-- <div class="or">OR</div>
+      <div class="or">OR</div>
       <div class="social-login">
-        <button class="social-btn facebook">Continue with Facebook</button>
-        <button class="social-btn google">Continue with Google</button>
-      </div> -->
+        <a href="/auth/google">
+          <button class="social-btn">
+            <img src="https://cdn4.iconfinder.com/data/icons/logos-brands-7/512/google_logo-google_icongoogle-512.png" alt="Google Logo">
+            Continue with Google
+          </button>
+        </a>
+      </div>
       <p class="terms">
-        By continuing, you agree to Picify's <a href="#">Terms of Service</a> and acknowledge<br>
-        you've read our <a href="#">Privacy Policy</a>.
+        By continuing, you agree to Picify's Terms of Service and acknowledge<br>
+        you've read our Privacy Policy.
       </p>
       <p class="signup">
         Already have a account? <a href="/login">Login</a>
