--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -12,7 +12,12 @@
       
       <div class="form-group">
         <label for="fullname">Full Name</label>
-        <input type="text" id="fullname" name="fullname" placeholder="Enter your full name" required />
+        <input type="text" id="fullname" name="fullname" placeholder="Enter your full name" />
+      </div>
+
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username" placeholder="Enter your username" />
       </div>
 
       <div class="form-group">
