some design changes

--- a/views/enter-otp.ejs
+++ b/views/enter-otp.ejs
@@ -21,7 +21,7 @@
 
       <div class="form-group">
         <label for="password">New Password</label>
-        <input type="password" id="password" name="password" placeholder="New Password" required />
+        <input type="password" id="password" name="password" placeholder="New Password" style="padding: 10px;" required />
       </div>
 
       <button type="submit">Reset Password</button>
