--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -12,7 +12,7 @@
       
       <div class="form-group">
         <label for="email">Enter Email</label>
-        <input type="email" id="email" name="email" placeholder="Enter your email address" />
+        <input type="email" id="email" name="email" placeholder="Enter your email address" style="padding: 10px;" />
       </div>
 
       <button type="submit">Send Reset Link</button>
