--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -45,6 +45,7 @@
         <a href="/feed" class="btn btn-outline-primary rounded-pill px-4">Feed</a>
         <a href="/logout" class="btn btn-outline-danger rounded-pill px-4">Log Out</a>
         <a href="/profile/edit" class="btn btn-outline-success rounded-pill px-4">Edit Profile</a>
+        <a href="/profile/saved" class="btn btn-outline-info rounded-pill px-4">Saved Posts</a>
       </div>
       
 
