--- a/public/stylesheets/feed.css
+++ b/public/stylesheets/feed.css
@@ -113,6 +113,26 @@ header h1 {
   background-color: #ff4d4d;
   color: white;
 }
+.save-btn {
+  background-color: #f1f1f1;
+  border: none;
+  border-radius: 20px;
+  padding: 6px 14px;
+  cursor: pointer;
+  font-size: clamp(12px, 3vw, 14px);
+  transition: all 0.3s ease;
+  margin: 0 0 7px 10px;
+}
+
+.save-btn:hover {
+  background-color: #d3f8d3;
+}
+
+.save-btn.saved {
+  background-color: #4caf50;
+  color: white;
+}
+
 
 /* Special adjustments for very small screens */
 @media (max-width: 400px) {
@@ -124,4 +144,20 @@ header h1 {
   .profile-btn {
     padding: 8px 16px; /* Slightly smaller button */
   }
+}
+
+.remove-btn {
+  background-color: #e8e8e8;
+  border: 0.5px solid #ff4d4d;
+  color: #090101;
+  padding: 6px 14px;
+  border-radius: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.remove-btn:hover {
+  background-color: #ff4d4d;
+  color: white;
 }
